# baxter_mover_utils

./: CMakeLists.txt  package.xml
include/baxter_mover_utils/: baxter_mover.hpp  helpers_methods.hpp  parameters.hpp
src/: baxter_arm_controller_service.cpp  baxter_mover.cpp  baxter_obstacle_avoidance.cpp
src/libs/: helpers_methods.cpp
srv/: move_baxter_arm.srv
